# electrum-core

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile.am  README.md  configure.ac  libelectrumconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.travis/: test_04_install.sh  test_05_before_script.sh  test_06_script_a.sh
.tx/: config
contrib/: README.md  electrum-cli.bash-completion  electrum-tx.bash-completion  gitian-build.sh  (+2 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  aes_helper.c  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  daoversionbit.cpp  daoversionbit.h  dbwrapper.h  electrum-Qt.files  electrum-cli-res.rc  electrum-cli.cpp  electrum-tx.cpp  (+60 more)
src/bench/: Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_electrum.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/consensus/: cfund.cpp  cfund.h  consensus.h  dao.cpp  dao.h  daoconsensusparams.h  merkle.cpp  merkle.h  params.h  validation.h
src/consensus/dao/: flags.h
src/crypto/: aes.cpp  aes.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/leveldb/doc/: benchmark.html
src/mnemonic/: dictionary.h  generateseed.cpp  generateseed.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  coldstakingwizard.cpp  communityfundcreatepaymentrequestdialog.cpp  communityfundcreateproposaldialog.cpp  communityfunddisplay.cpp  communityfunddisplaydetailed.cpp  communityfunddisplaypaymentrequest.cpp  communityfunddisplaypaymentrequestdetailed.cpp  communityfundpage.cpp  communityfundsuccessdialog.cpp  csvmodelwriter.h  daoconsultationcreate.cpp  daoconsultationcreate.h  daoconsultationvote.cpp  daoconsultationvote.h  daopage.cpp  daopage.h  daoproposeanswer.cpp  daoproposeanswer.h  daosupport.cpp  daosupport.h  editaddressdialog.cpp  electrum.cpp  electrum.files  electrum.qrc  electrum4.files  electrum_locale.qrc  electrumaddressvalidator.cpp  electrumamountfield.cpp  electrumamountfield.h  (+87 more)
src/qt/electrum-qt.dSYM/: desktop.ini
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  communityfundcreatepaymentrequestdialog.ui  communityfundcreateproposaldialog.ui  communityfunddisplay.ui  communityfunddisplaydetailed.ui  communityfunddisplaypaymentrequest.ui  communityfunddisplaypaymentrequestdetailed.ui  communityfundpage.ui  debugwindow.ui  getaddresstoreceive.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  sendcommunityfunddialog.ui  signverifymessagedialog.ui  startoptionsrevealed.ui  transactiondescdialog.ui
src/qt/locale/: electrum_af.ts  electrum_af_ZA.ts  electrum_ar.ts  electrum_be_BY.ts  electrum_bg.ts  electrum_bg_BG.ts  electrum_ca.ts  electrum_ca@valencia.ts  electrum_ca_ES.ts  electrum_cs.ts  electrum_cs_CZ.ts  electrum_cy.ts  electrum_da.ts  electrum_de.ts  electrum_el.ts  electrum_el_GR.ts  electrum_en.ts  electrum_en_GB.ts  electrum_eo.ts  electrum_es.ts  electrum_es_AR.ts  electrum_es_CL.ts  electrum_es_CO.ts  electrum_es_DO.ts  electrum_es_ES.ts  electrum_es_MX.ts  electrum_es_UY.ts  electrum_es_VE.ts  electrum_et.ts  electrum_eu_ES.ts  electrum_fa.ts  electrum_fa_IR.ts  electrum_fi.ts  electrum_fr.ts  electrum_fr_CA.ts  electrum_fr_FR.ts  electrum_gl.ts  electrum_he.ts  electrum_hi_IN.ts  electrum_hr.ts  (+45 more)
src/qt/res/: electrum-qt-res.rc
src/qt/res/icons/: electrum.icns
src/qt/res/themes/: app.qss
src/qt/styles/: dark.cpp  dark.h  light.cpp  light.h
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: electrumconsensus.cpp  electrumconsensus.h  interpreter.h  ismine.cpp  ismine.h  script.h  script_error.h  sigcache.h  standard.cpp  standard.h
src/support/: pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  cfund_tests.cpp  cfunddb_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  electrum-util-test.py  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  (+18 more)
src/test/data/: electrum-util-test.json  script_tests.json  sighash.json  tx_valid.json
src/utils/: dns_utils.cpp
src/wallet/: crypter.h  db.cpp  db.h  navtech.cpp  navtech.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h
src/wallet/test/: crypto_tests.cpp  rpc_wallet_tests.cpp  wallet_test_fixture.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.h
(+235 files in other folders)
